--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "directories": {
     "doc": "docs"
   },
+  "homepage": "https://briansekwakwa.github.io/beginner-guitars",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gh-pages -d docs"
   },
   "keywords": [],
   "author": "Brian Sekwakwa",
-  "license": "ISC"
+  "license": "MIT"
 }
